--- a/api/build.gradle
+++ b/api/build.gradle
@@ -3,7 +3,12 @@ plugins {
 }
 
 dependencies {
+    implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation project(':server')
+
 }
 
 springBoot {
